<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/appointment_back_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/background"
                android:contentDescription="@string/back_btn"
                android:padding="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/back_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/appointment_doctor_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_background"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/doctor" />

            <TextView
                android:id="@+id/appointment_doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/doctor_name"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_time_slot"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/appointment_time_slot_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/consultation_type"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/appointment_consultation_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/appointment_consultation_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online" />

            <RadioButton
                android:id="@+id/appointment_consultation_in_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="true"
                android:text="@string/in_person" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/additional_services"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/appointment_service_medical_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_report" />

        <CheckBox
            android:id="@+id/appointment_service_lab_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_tests" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/appointment_patient_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_you_feel" />

        <Button
            android:id="@+id/appointment_book_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/Primary"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/book_appointment"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
