<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/appointment_item_doctor_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circle_background"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/doctor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/appointment_item_doctor_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appointment_doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/appointment_item_place_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:textColor="#888888"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:id="@+id/appointment_item_time_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_slot"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/appointment_item_consultation_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultation_type"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:orientation="horizontal">

        <CheckBox
            android:id="@+id/appointment_item_medical_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/medical_report" />

        <CheckBox
            android:id="@+id/appointment_item_lab_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/lab_tests" />
    </LinearLayout>

    <TextView
        android:id="@+id/appointment_item_patient_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:text="@string/patient_description"
        android:textSize="16sp" />
</LinearLayout>
