<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/doctor_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/doctor" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/book_doctor_specialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialty"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/book_doctor_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/book_doctor_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_4_5"
                android:textColor="#666"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>