<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/background"
            android:contentDescription="@string/back_btn"
            android:padding="1dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/back_arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/doctor_background_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/doctor_background" />


        <ImageView
            android:id="@+id/book_doctor_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-75dp"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/Primary"
            android:padding="15dp"
            android:src="@drawable/doctor" />

        <TextView
            android:id="@+id/book_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book_doctor_specialty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/specialty"
            android:textColor="#666"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/book_doctor_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_4_5"
            android:textColor="#666"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/book_doctor_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="#666"
            android:textSize="14sp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/book_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/Primary"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/book_appointment"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>
